--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="header-container">
 
             <a href="#home" class="logo-container">
-                <img src="ASSETS/logo.png" alt="Logo CliniTech" class="logo">
-                <span class="titulo-logo">CliniTech</span>
+                <img src="ASSETS/logo.png" alt="Logo CliniTech" class="logo"  href="index.html">
+                <span class="titulo-logo"  href="index.html">CliniTech</span>
             </a>
 
             <nav class="navbar">
                 <ul class="nav-links">
-                    <li><a href="#home">Início</a></li>
-                    <li><a href="#quem-somos">Quem Somos</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#sobre">Quem Somos</a></li>
                     <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#especialistas">Especialistas</a></li>
+                    <li><a href="especialistas.html">Especialistas</a></li>
                     <li><a href="#contato">Contato</a></li>
                     <li><a href="#login" class="botao-login">Login</a></li>
                     <li><a href="#cadastro" class="botao-cadastro">Cadastre-se</a></li>
@@ -45,13 +45,11 @@
     </div>
   </section>
 
-  <!-- Sobre -->
   <section id="sobre" class="secao sobre">
     <h2>Sobre o Projeto</h2>
     <p>A TeleMack nasceu com o objetivo de facilitar o acesso à saúde, permitindo que pacientes se consultem com profissionais de diversas especialidades por meio da telemedicina.</p>
   </section>
 
-  <!-- Serviços -->
   <section id="servicos" class="secao servicos">
     <h2>Nossos Serviços</h2>
     <div class="cards">
@@ -70,7 +68,6 @@
     </div>
   </section>
 
-  <!-- Contato -->
   <section id="contato" class="secao contato">
     <h2>Fale Conosco</h2>
     <form>
@@ -82,7 +79,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 TeleMack - Todos os direitos reservados.</p>
+    <p>&copy; 2025 CliniTech - Todos os direitos reservados.</p>
   </footer>
 
     <script src="script.js"></script>
