--- a/especialistas.html
+++ b/especialistas.html
@@ -19,11 +19,11 @@
 
             <nav class="navbar">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#inicio">Home</a></li>
                     <li><a href="#sobre">Quem Somos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#tecnologia">Tecnologia</a></li>
-                    <li><a href="especialistas.html">Especialistas</a></li>
+                    <li><a href="#especialistas">Especialistas</a></li>
                     <li><a href="#contato">Contato</a></li>
                     <li><a href="#login" class="botao-login">Login</a></li>
                     <li><a href="#cadastro" class="botao-cadastro">Cadastre-se</a></li>
@@ -133,10 +133,17 @@
 
     <div id="agendamento-modal" class="modal">
         <div class="modal-conteudo">
+            <span class="fechar-modal">&times;</span>
+            <h3>Agendamento de Consulta</h3>
+            <p class="modal-subtitulo">Selecione uma data e horário disponíveis.</p>
+
             <div class="calendario-simulado">
                 <div class="navegacao-mes">
-                    <span id="prev-mes" class="seta-mes">&#9664;</span> <div class="mes-ano" id="mes-ano-display">Outubro 2025</div>
-                    <span id="next-mes" class="seta-mes">&#9654;</span> </div>
+                    <span id="prev-mes" class="seta-mes">&#9664;</span> 
+                    <div class="mes-ano" id="mes-ano-display">Outubro 2025</div>
+                    <span id="next-mes" class="seta-mes">&#9654;</span> 
+                </div>
+                
                 <div class="dias-semana">
                     <span>Dom</span><span>Seg</span><span>Ter</span><span>Qua</span><span>Qui</span><span>Sex</span><span>Sáb</span>
                 </div>
@@ -144,8 +151,19 @@
                     </div>
             </div>
 
+            <div class="horarios-disponiveis">
+                <h4>Horários disponíveis:</h4>
+                <div class="horarios">
+                    <button class="hora-disponivel">09:00</button>
+                    <button class="hora-disponivel">10:30</button>
+                    <button class="hora-disponivel">14:00</button>
+                    <button class="hora-disponivel">16:30</button>
+                </div>
+            </div>
+
+            <button class="botao-confirmar-agendamento">Confirmar Agendamento</button>
         </div>
-    </div>  
+    </div>
     
     <script src="script.js"></script>
 </body>
