--- a/servicos.html
+++ b/servicos.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-container">
 
-            <a href="#inicio" class="logo-container">
+            <a href="index.html" class="logo-container">
                 <img src="ASSETS/logo.png" alt="Logo CliniTech" class="logo" href="index.html">
                 <span class="titulo-logo"  href="index.html">CliniTech</span>
             </a>
@@ -20,7 +20,7 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#sobre">Quem Somos</a></li>
+                    <li><a href="sobre.html">Quem Somos</a></li>
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="especialistas.html">Especialistas</a></li>
                     <li><a href="#contato">Contato</a></li>
