--- a/especialistas.html
+++ b/especialistas.html
@@ -21,10 +21,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Quem Somos</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#tecnologia">Tecnologia</a></li>
-                    <li><a href="#especialistas">Especialistas</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="especialistas.html">Especialistas</a></li>
                     <li><a href="#login" class="botao-login">Login</a></li>
                     <li><a href="#cadastro" class="botao-cadastro">Cadastre-se</a></li>
                 </ul>
@@ -41,7 +39,7 @@
 
     <section id="inicio" class="secao inicio">
         <div class="conteudo">
-            <h2>Sua Saúde. Elevada.</h2>
+            <h2>Sua Saúde</h2>
             <p>A CliniTech redefine a telemedicina, oferecendo consultas com especialistas renomados, 
                 onde o luxo encontra a conveniência digital.</p>
             <button class="botao-agendar">Agende sua Experiência</button>
