--- a/index.html
+++ b/index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CliniTech</title>
-    <link rel="stylesheet" href="CSS/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CliniTech</title>
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
-    <header>
-        <div class="header-container">
+  <header>
+    <div class="header-container">
+      <a href="index.html" class="logo-container">
+        <img src="ASSETS/logo.png" alt="Logo CliniTech" class="logo">
+        <span class="titulo-logo">CliniTech</span>
+      </a>
 
-            <a href="index.html" class="logo-container">
-                <img src="ASSETS/logo.png" alt="Logo CliniTech" class="logo"  href="index.html">
-                <span class="titulo-logo"  href="index.html">CliniTech</span>
-            </a>
+      <nav class="navbar">
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="sobre.html">Quem Somos</a></li>
+          <li><a href="servicos.html">Serviços</a></li>
+          <li><a href="especialistas.html">Especialistas</a></li>
+          <li><a href="#login" class="botao-login">Login</a></li>
+          <li><a href="#cadastro" class="botao-cadastro">Cadastre-se</a></li>
+        </ul>
+      </nav>
 
-            <nav class="navbar">
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Quem Somos</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="especialistas.html">Especialistas</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                    <li><a href="#login" class="botao-login">Login</a></li>
-                    <li><a href="#cadastro" class="botao-cadastro">Cadastre-se</a></li>
-                </ul>
-            </nav>
+      <div class="menu-toggle" id="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </header>
 
-            <div class="menu-toggle" id="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-
-        </div>
-    </header>
-
-    <section id="inicio" class="secao inicio">
+  <section id="inicio" class="secao inicio">
     <div class="conteudo">
       <h2>Atendimento médico rápido e acessível</h2>
       <p>Com a TeleMack, você pode agendar consultas e falar com médicos sem sair de casa.</p>
-      <button>Agendar Consulta</button>
     </div>
   </section>
 
@@ -78,10 +74,32 @@
     </form>
   </section>
 
+  <!-- ===== MODAL DE LOGIN ===== -->
+  <div id="login-modal" class="modal">
+    <div class="modal-content">
+      <span class="fechar" id="fechar-login">&times;</span>
+      <h2>Login</h2>
+      <form class="form-login">
+        <div class="campo">
+          <label for="email-login">E-mail</label>
+          <input type="email" id="email-login" placeholder="Digite seu e-mail" required />
+        </div>
+
+        <div class="campo">
+          <label for="senha-login">Senha</label>
+          <input type="password" id="senha-login" placeholder="Digite sua senha" required />
+        </div>
+
+        <button type="submit">Entrar</button>
+        <p class="cadastro-link">Ainda não tem conta? <a href="#cadastro">Cadastre-se</a></p>
+      </form>
+    </div>
+  </div>
+
   <footer>
     <p>&copy; 2025 CliniTech - Todos os direitos reservados.</p>
   </footer>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
