--- a/servicos.html
+++ b/servicos.html
@@ -21,9 +21,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Quem Somos</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="especialistas.html">Especialistas</a></li>
-                    <li><a href="#contato">Contato</a></li>
                     <li><a href="#login" class="botao-login">Login</a></li>
                     <li><a href="#cadastro" class="botao-cadastro">Cadastre-se</a></li>
                 </ul>
@@ -76,7 +75,7 @@
                 <span class="crm">CRM: 67890-SP</span>
             </div>
             <div class="card-especialista">
-                <img src="ASSETS/medica-pediatra.jpg" alt="Foto da Dra. Carla Santos">
+                <img src="ASSETS/medica-pediatra.png" alt="Foto da Dra. Carla Santos">
                 <h3>Dra. Carla Santos</h3>
                 <p class="especialidade">Pediatra</p>
                 <span class="crm">CRM: 11223-MG</span>
