--- a/sobre.html
+++ b/sobre.html
@@ -157,6 +157,28 @@
             <button class="botao-confirmar-agendamento">Confirmar Agendamento</button>
         </div>
     </div>
+
+     <!-- ===== MODAL DE LOGIN ===== -->
+    <div id="login-modal" class="modal">
+        <div class="modal-content">
+        <span class="fechar" id="fechar-login">&times;</span>
+        <h2>Login</h2>
+        <form class="form-login">
+            <div class="campo">
+            <label for="email-login">E-mail</label>
+            <input type="email" id="email-login" placeholder="Digite seu e-mail" required />
+            </div>
+
+            <div class="campo">
+            <label for="senha-login">Senha</label>
+            <input type="password" id="senha-login" placeholder="Digite sua senha" required />
+            </div>
+
+            <button type="submit">Entrar</button>
+            <p class="cadastro-link">Ainda não tem conta? <a href="#cadastro">Cadastre-se</a></p>
+        </form>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
