--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre Nós</a></li> 
+                    <li><a href="sobre.html">Quem Somos</a></li> 
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="especialistas.html">Especialistas</a></li>
                     <li><a href="#login" class="botao-login">Login</a></li>
