Substituição do nome na aba home

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <section id="sobre" class="secao sobre">
     <h2>Sobre o Projeto</h2>
-    <p>A TeleMack nasceu com o objetivo de facilitar o acesso à saúde, permitindo que pacientes se consultem com profissionais de diversas especialidades por meio da telemedicina.</p>
+    <p>A CliniTech nasceu com o objetivo de facilitar o acesso à saúde, permitindo que pacientes se consultem com profissionais de diversas especialidades por meio da telemedicina.</p>
   </section>
 
   <section id="servicos" class="secao servicos">
