--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="inicio" class="secao inicio">
     <div class="conteudo">
       <h2>Bem-Vindo!</h2>
-      <p>Com a TeleMack, você pode agendar consultas e falar com médicos sem sair de casa.</p>
+      <p>Com a CliniTech, você pode agendar consultas e falar com médicos sem sair de casa.</p>
     </div>
   </section>
 
