Pequenas alterações para atividade

--- a/especialistas.html
+++ b/especialistas.html
@@ -124,6 +124,48 @@
         </form>
     </section>
 
+        <!-- ===== MODAL "TIME COMPLETO" ===== -->
+    <div id="time-modal" class="modal">
+        <div class="modal-conteudo time-conteudo">
+            <span class="fechar-time">&times;</span>
+            <h3>Nosso Time Completo</h3>
+            <p>Selecione um especialista para agendar uma consulta.</p>
+            <div class="cards-especialistas-modal">
+                <div class="card-especialista-modal">
+                    <img src="ASSETS/medico-cardiologista.jpg" alt="Dr. João Silva">
+                    <h3>Dr. João Silva</h3>
+                    <p class="especialidade">Cardiologista</p>
+                    <span>Especialista em monitoramento remoto.</span>
+                </div>
+                <div class="card-especialista-modal">
+                    <img src="ASSETS/medica-ginecolista.jpg" alt="Dra. Isabela Costa">
+                    <h3>Dra. Isabela Costa</h3>
+                    <p class="especialidade">Ginecologista</p>
+                    <span>Atendimento discreto e acolhedor.</span>
+                </div>
+                <div class="card-especialista-modal">
+                    <img src="ASSETS/medica-pediatra.png" alt="Dra. Carla Santos">
+                    <h3>Dra. Carla Santos</h3>
+                    <p class="especialidade">Pediatra</p>
+                    <span>Foco na saúde infantil.</span>
+                </div>
+                <div class="card-especialista-modal">
+                    <img src="ASSETS/medico-psiquiatra.jpg" alt="Dr. Ricardo Lima">
+                    <h3>Dr. Ricardo Lima</h3>
+                    <p class="especialidade">Psiquiatra</p>
+                    <span>Atendimento humanizado e sigiloso.</span>
+                </div>
+                <div class="card-especialista-modal">
+                    <img src="ASSETS/medica-dermatologista.jpg" alt="Dra. Beatriz Rocha">
+                    <h3>Dra. Beatriz Rocha</h3>
+                    <p class="especialidade">Dermatologista</p>
+                    <span>Cuidados avançados com a pele.</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <footer>
         <p>&copy; 2025 CliniTech - Todos os direitos reservados.</p>
     </footer>
