--- a/servicos.html
+++ b/servicos.html
@@ -9,6 +9,85 @@
 </head>
 
 <body>
+
+<!-- ===== MODAL LISTA DE ESPECIALISTAS ===== -->
+    <div id="modal-time" class="modal-time">
+        <div class="modal-time-content">
+
+            <span class="modal-time-close">&times;</span>
+            <h2>Todos os Especialistas</h2>
+
+            <!-- Agrupamento por especialidade -->
+            <div class="modal-time-group">
+                <h3>Cardiologia</h3>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/medico-cardiologista.jpg" alt="Dr. João Silva">
+                    <h4>Dr. João Silva</h4>
+                    <p class="modal-time-area">Cardiologia</p>
+                </div>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/foto-cardiologista.jpg" alt="Dr. Pedro Moura">
+                    <h4>Dr. Pedro Moura</h4>
+                    <p class="modal-time-area">Cardiologia</p>
+                </div>
+            </div>
+
+            <div class="modal-time-group">
+                <h3>Ginecologia</h3>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/Gemini_Generated_Image_bbydlibbydlibbyd.png" alt="Dra. Isabela Costa">
+                    <h4>Dra. Isabela Costa</h4>
+                    <p class="modal-time-area">Ginecologia</p>
+                </div>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/medica-ginecolista.jpg" alt="Dra. Clarissa Prado">
+                    <h4>Dra. Clarissa Prado</h4>
+                    <p class="modal-time-area">Ginecologia</p>
+                </div>
+            </div>
+
+            <div class="modal-time-group">
+                <h3>Pediatria</h3>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/medica-pediatra.png" alt="Dra. Carla Santos">
+                    <h4>Dra. Carla Santos</h4>
+                    <p class="modal-time-area">Pediatria</p>
+                </div>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/medica-pediatra.png" alt="Dr. Felipe Ramos">
+                    <h4>Dr. Felipe Ramos</h4>
+                    <p class="modal-time-area">Pediatria</p>
+                </div>
+            </div>
+
+            <div class="modal-time-group">
+                <h3>Dermatologia</h3>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/Gemini_Generated_Image_o17v3xo17v3xo17v.png" alt="Dra. Luciana Lina">
+                    <h4>Dra. Luciana Lima</h4>
+                    <p class="modal-time-area">Dermatologia</p>
+                </div>
+
+                <div class="modal-time-card">
+                    <img src="ASSETS/Gemini_Generated_Image_ip1orpip1orpip1o.png" alt="Dr. Beatriz Ramos">
+                    <h4>Dr. Beatriz Ramos</h4>
+                    <p class="modal-time-area">Dermatologia</p>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+<body>
     <header>
         <div class="header-container">
 
@@ -68,7 +147,7 @@
                 <span class="crm">CRM: 12345-SP</span>
             </div>
             <div class="card-especialista">
-                <img src="ASSETS/medica-ginecolista.jpg" alt="Foto da Dra. Isabela Costa">
+                <img src="ASSETS/Gemini_Generated_Image_bbydlibbydlibbyd.png" alt="Foto da Dra. Isabela Costa">
                 <h3>Dra. Isabela Costa</h3>
                 <p class="especialidade">Ginecologista</p>
                 <span class="crm">CRM: 67890-SP</span>
@@ -118,6 +197,7 @@
         </form>
         </div>
     </div>
+
 
     <script src="script.js"></script>
 </body>
