Foto medico pediatra

--- a/especialistas.html
+++ b/especialistas.html
@@ -207,7 +207,7 @@
                 </div>
 
                 <div class="modal-time-card">
-                    <img src="ASSETS/medica-pediatra.png" alt="Dr. Felipe Ramos">
+                    <img src="ASSETS/Gemini_Generated_Image_w1o04nw1o04nw1o0.png" alt="Dr. Felipe Ramos">
                     <h4>Dr. Felipe Ramos</h4>
                     <p class="modal-time-area">Pediatria</p>
                 </div>
